[gd_scene load_steps=13 format=3 uid="uid://dl1enj0x41grc"]

[ext_resource type="Script" path="res://Main.gd" id="1_taoo3"]
[ext_resource type="AudioStream" uid="uid://b4x6eksm6skkq" path="res://sound/BGM/Missing_Persons_-_Jeremy_Blake.mp3" id="2_ge8yg"]
[ext_resource type="TileSet" uid="uid://ctdfec0656fuy" path="res://assets/tilesets/Day.tres" id="3_3jxug"]
[ext_resource type="TileSet" uid="uid://bfqk1npxl8dy1" path="res://assets/tilesets/Night.tres" id="5_63ebu"]
[ext_resource type="TileSet" uid="uid://crlqwe2tqeqv7" path="res://assets/tilesets/Tileset.tres" id="7_rpcob"]
[ext_resource type="PackedScene" uid="uid://xxydai5do85b" path="res://scene/TrapCollision.tscn" id="8_i5cjx"]
[ext_resource type="Script" path="res://TrapCollision.gd" id="9_fd8df"]
[ext_resource type="PackedScene" uid="uid://caxjcyt48xmp0" path="res://scene/Character.tscn" id="10_tc7wq"]
[ext_resource type="Texture2D" uid="uid://14wnrv1n5jof" path="res://assets/Lightning.png" id="11_x8vvf"]
[ext_resource type="PackedScene" uid="uid://bio2wxum33qhf" path="res://scene/UI.tscn" id="12_j6qy8"]
[ext_resource type="PackedScene" uid="uid://dcdh88e4al28v" path="res://scene/Boss.tscn" id="13_ixunt"]
[ext_resource type="PackedScene" uid="uid://bgm28uvfjb2m7" path="res://scene/enemy_day_melee.tscn" id="14_nw2rx"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_taoo3")

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ge8yg")
volume_db = -5.0

[node name="AbleToSwapWorldTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="DayNode" type="Node2D" parent="."]

[node name="Day" type="TileMap" parent="DayNode"]
tile_set = ExtResource("3_3jxug")
format = 2
layer_0/name = "Floor"
layer_0/tile_data = PackedInt32Array(196605, 0, 0, 65532, 0, 0, -4, 0, 0, -65540, 0, 0, -131076, 0, 0, -196612, 0, 0, -327684, 0, 0, 327674, 0, 0, 262138, 0, 0, 196602, 0, 0, 131066, 0, 0, 65530, 0, 0, -6, 0, 0, -65542, 0, 0, -131078, 0, 0, -196614, 0, 0, -262150, 0, 0, -327686, 0, 0, -327685, 0, 0, 327675, 0, 0, 327676, 0, 0, 196604, 0, 0, 131068, 0, 0, 327677, 0, 0, 327678, 0, 0, 196606, 0, 0, 65534, 0, 0, -2, 0, 0, -65538, 0, 0, -196610, 0, 0, -327682, 0, 0, -327683, 0, 0, -327681, 0, 0, -196609, 0, 0, -65537, 0, 0, -1, 0, 0, 65535, 0, 0, 196607, 0, 0, 327679, 0, 0, 262144, 0, 0, 131072, 0, 0, 0, 0, 0, -65536, 0, 0, -131072, 0, 0, -262144, 0, 0, -393216, 0, 0, -393215, 0, 0, -262143, 0, 0, -131070, 0, 0, -196606, 0, 0, -262142, 0, 0, -393214, 0, 0, -393213, 0, 0, -262140, 0, 0, -327676, 0, 0, -393212, 0, 0, -196604, 0, 0, -131068, 0, 0, -65534, 0, 0, 2, 0, 0, 131073, 0, 0, 131074, 0, 0, 65538, 0, 0, 4, 0, 0, -65532, 0, 0, 65540, 0, 0, 131076, 0, 0, 262146, 0, 0, 262145, 0, 0, 262147, 0, 0, 262148, 0, 0, 196612, 0, 0, -196611, 0, 0, 131067, 131072, 0, -7, 0, 0, -131077, 0, 0, -3, 131072, 0, 262141, 0, 0, 131071, 0, 0, 196609, 131072, 0, 65539, 0, 0, -65531, 131072, 0, -65535, 131072, 0, -131073, 0, 0, -262147, 131072, 0, -327679, 0, 0, -196605, 131072, 0, -262137, 0, 0, -196601, 0, 0, -131065, 0, 0, -262136, 0, 0, -196600, 0, 0, -131064, 0, 0, -524282, 0, 0, -458746, 0, 0, -393210, 0, 0, -327674, 0, 0, -262138, 0, 0, -196602, 0, 0, -131066, 0, 0, -65530, 0, 0, 6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, -524281, 0, 0, -458745, 0, 0, -393209, 0, 0, -327673, 0, 0, -65529, 0, 0, 7, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, -524280, 0, 0, -458744, 0, 0, -393208, 0, 0, -327672, 0, 0, -65528, 0, 0, 8, 0, 0, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 458742, 0, 0, 524278, 0, 0, 589814, 0, 0, 458743, 0, 0, 524279, 0, 0, 589815, 0, 0, 458744, 0, 0, 524280, 0, 0, 589816, 0, 0, 458745, 0, 0, 524281, 0, 0, 589817, 0, 0, 458746, 0, 0, 524282, 0, 0, 589818, 0, 0, 458747, 0, 0, 524283, 0, 0, 589819, 0, 0, 458748, 0, 0, 524284, 0, 0, 589820, 0, 0, 458749, 0, 0, 524285, 0, 0, 589821, 0, 0, 458750, 0, 0, 524286, 0, 0, 589822, 0, 0, 458751, 0, 0, 524287, 0, 0, 589823, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 458758, 0, 0, 524294, 0, 0, 458759, 0, 0, 524295, 0, 0, 458760, 0, 0, 524296, 0, 0, -589834, 0, 0, -524298, 0, 0, -458762, 0, 0, -393226, 0, 0, -327690, 0, 0, -262154, 0, 0, -196618, 0, 0, -131082, 0, 0, -65546, 0, 0, -10, 0, 0, 65526, 0, 0, 131062, 0, 0, 196598, 0, 0, 262134, 0, 0, 327670, 0, 0, 393206, 0, 0, -589833, 0, 0, -524297, 0, 0, -458761, 0, 0, -393225, 0, 0, -327689, 0, 0, -262153, 0, 0, -196617, 0, 0, -131081, 0, 0, -65545, 0, 0, -9, 0, 0, 65527, 0, 0, 131063, 0, 0, 196599, 0, 0, 262135, 0, 0, 327671, 0, 0, 393207, 0, 0, -589832, 0, 0, -524296, 0, 0, -458760, 0, 0, -393224, 0, 0, -327688, 0, 0, -262152, 0, 0, -196616, 0, 0, -131080, 0, 0, -65544, 0, 0, -8, 0, 0, 65528, 0, 0, 131064, 0, 0, 196600, 0, 0, 262136, 0, 0, 327672, 0, 0, 393208, 0, 0, -589831, 0, 0, -524295, 0, 0, -458759, 0, 0, -589830, 0, 0, -524294, 0, 0, -458758, 0, 0, -589829, 0, 0, -524293, 0, 0, -458757, 0, 0, -589828, 0, 0, -524292, 0, 0, -458756, 0, 0, -589827, 0, 0, -524291, 0, 0, -458755, 0, 0, -589826, 0, 0, -524290, 0, 0, -458754, 0, 0, -589825, 0, 0, -524289, 0, 0, -458753, 0, 0, -655360, 0, 0, -589824, 0, 0, -524288, 0, 0, -655359, 0, 0, -589823, 0, 0, -524287, 0, 0, -655358, 0, 0, -589822, 0, 0, -524286, 0, 0, -655357, 0, 0, -589821, 0, 0, -524285, 0, 0, -655356, 0, 0, -589820, 0, 0, -524284, 0, 0, -655355, 0, 0, -589819, 0, 0, -524283, 0, 0, -655354, 0, 0, -589818, 0, 0, -655353, 0, 0, -589817, 0, 0, -655352, 0, 0, -589816, 0, 0, -655351, 0, 0, -589815, 0, 0, -524279, 0, 0, -458743, 0, 0, -393207, 0, 0, -327671, 0, 0, -262135, 0, 0, -196599, 0, 0, -131063, 0, 0, -65527, 0, 0, 9, 0, 0, 65545, 0, 0, 131081, 0, 0, 196617, 0, 0, 262153, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 0, 0, 524297, 0, 0, -655350, 0, 0, -589814, 0, 0, -524278, 0, 0, -458742, 0, 0, -393206, 0, 0, -327670, 0, 0, -262134, 0, 0, -196598, 0, 0, -131062, 0, 0, -65526, 0, 0, 10, 0, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 0, 0, -655349, 0, 0, -589813, 0, 0, -524277, 0, 0, -458741, 0, 0, -393205, 0, 0, -327669, 0, 0, -262133, 0, 0, -196597, 0, 0, -131061, 0, 0, -65525, 0, 0, 11, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 524299, 0, 0, -655348, 0, 0, -589812, 0, 0, -524276, 0, 0, -458740, 0, 0, -393204, 0, 0, -327668, 0, 0, -262132, 0, 0, -196596, 0, 0, -131060, 0, 0, -65524, 0, 0, 12, 0, 0, 65548, 0, 0, 131084, 0, 0, 196620, 0, 0, 262156, 0, 0, 327692, 0, 0, 393228, 0, 0, 458764, 0, 0, 524300, 0, 0, -655347, 0, 0, -589811, 0, 0, -524275, 0, 0, -458739, 0, 0, -393203, 0, 0, -327667, 0, 0, -262131, 0, 0, -196595, 0, 0, -131059, 0, 0, -65523, 0, 0, 13, 0, 0, 65549, 0, 0, 131085, 0, 0, 196621, 0, 0, 262157, 0, 0, 327693, 0, 0, 393229, 0, 0, 458765, 0, 0, 524301, 0, 0, -655346, 0, 0, -589810, 0, 0, -524274, 0, 0, -458738, 0, 0, -393202, 0, 0, -327666, 0, 0, -262130, 0, 0, -196594, 0, 0, -131058, 0, 0, -65522, 0, 0, 14, 0, 0, 65550, 0, 0, 131086, 0, 0, 196622, 0, 0, 262158, 0, 0, 327694, 0, 0, 393230, 0, 0, 458766, 0, 0, 524302, 0, 0, -655345, 0, 0, -589809, 0, 0, -524273, 0, 0, -458737, 0, 0, -393201, 0, 0, -327665, 0, 0, -262129, 0, 0, -196593, 0, 0, -131057, 0, 0, -65521, 0, 0, 15, 0, 0, 65551, 0, 0, 131087, 0, 0, 196623, 0, 0, 262159, 0, 0, 327695, 0, 0, 393231, 0, 0, 458767, 0, 0, 524303, 0, 0, -655344, 0, 0, -589808, 0, 0, -524272, 0, 0, -458736, 0, 0, -393200, 0, 0, -327664, 0, 0, -262128, 0, 0, -196592, 0, 0, -131056, 0, 0, -65520, 0, 0, 16, 0, 0, 65552, 0, 0, 131088, 0, 0, 196624, 0, 0, 262160, 0, 0, 327696, 0, 0, 393232, 0, 0, 458768, 0, 0, 524304, 0, 0, -655343, 0, 0, -589807, 0, 0, -524271, 0, 0, -458735, 0, 0, -393199, 0, 0, -327663, 0, 0, -262127, 0, 0, -196591, 0, 0, -131055, 0, 0, -65519, 0, 0, 17, 0, 0, 65553, 0, 0, 131089, 0, 0, 196625, 0, 0, 262161, 0, 0, 327697, 0, 0, 393233, 0, 0, 458769, 0, 0, 524305, 0, 0, -655342, 0, 0, -589806, 0, 0, -524270, 0, 0, -458734, 0, 0, -393198, 0, 0, -327662, 0, 0, -262126, 0, 0, -196590, 0, 0, -131054, 0, 0, -65518, 0, 0, 18, 0, 0, 65554, 0, 0, 131090, 0, 0, 196626, 0, 0, 262162, 0, 0, 327698, 0, 0, 393234, 0, 0, 458770, 0, 0, 524306, 0, 0, -655341, 0, 0, -589805, 0, 0, -524269, 0, 0, -458733, 0, 0, -393197, 0, 0, -327661, 0, 0, -262125, 0, 0, -196589, 0, 0, -131053, 0, 0, -65517, 0, 0, 19, 0, 0, 65555, 0, 0, 131091, 0, 0, 196627, 0, 0, 262163, 0, 0, 327699, 0, 0, 393235, 0, 0, 458771, 0, 0, 524307, 0, 0, -655340, 0, 0, -589804, 0, 0, -524268, 0, 0, -458732, 0, 0, -393196, 0, 0, -327660, 0, 0, -262124, 0, 0, -196588, 0, 0, -131052, 0, 0, -65516, 0, 0, 20, 0, 0, 65556, 0, 0, 131092, 0, 0, 196628, 0, 0, 262164, 0, 0, 327700, 0, 0, 393236, 0, 0, 458772, 0, 0, 524308, 0, 0)
layer_1/name = "Wall"
layer_1/tile_data = PackedInt32Array(-131074, 65536, 0, -131075, 65536, 0, -65539, 65536, 0, 65533, 65536, 0, 131069, 65536, 0, 131070, 65536, 0, 65536, 65536, 0, 65537, 65536, 0, 1, 65536, 0, -131071, 65536, 0, -196607, 65536, 0, -196608, 65536, 0, -262145, 65536, 0, -262146, 65536, 0, -327680, 65536, 0, -327678, 65536, 0, -327677, 65536, 0, -262141, 65536, 0, -131069, 65536, 0, -65533, 65536, 0, 3, 65536, 0, 131075, 65536, 0, 196611, 65536, 0, 196610, 65536, 0, 196608, 65536, 0, 262143, 65536, 0, 262142, 65536, 0, 262140, 65536, 0, 262139, 65536, 0, 196603, 65536, 0, 65531, 65536, 0, -5, 65536, 0, -65541, 65536, 0, -196613, 65536, 0, -262149, 65536, 0, -262148, 65536, 0, -65543, 65536, 0, -131079, 65536, 0, -196615, 65536, 0, -262151, 65536, 0, -327687, 65536, 0, -393223, 65536, 0, -393222, 65536, 0, -393221, 65536, 0, -393220, 65536, 0, -393219, 65536, 0, -393218, 65536, 0, -393217, 65536, 0, -458752, 65536, 0, -458751, 65536, 0, -458750, 65536, 0, -458749, 65536, 0, -458748, 65536, 0, -458747, 65536, 0, -393211, 65536, 0, -327675, 65536, 0, -262139, 65536, 0, -196603, 65536, 0, -131067, 65536, 0, 5, 65536, 0, 65541, 65536, 0, 131077, 65536, 0, 196613, 65536, 0, 262149, 65536, 0, 327685, 65536, 0, 327684, 65536, 0, 327683, 65536, 0, 327682, 65536, 0, 327681, 65536, 0, 327680, 65536, 0, 393215, 65536, 0, 393214, 65536, 0, 393213, 65536, 0, 393212, 65536, 0, 393211, 65536, 0, 393210, 65536, 0, 393209, 65536, 0, 327673, 65536, 0, 262137, 65536, 0, 196601, 65536, 0, 131065, 65536, 0, 65529, 65536, 0)

[node name="NightNode" type="Node2D" parent="."]

[node name="Night" type="TileMap" parent="NightNode"]
tile_set = ExtResource("5_63ebu")
format = 2
layer_0/name = "Floor"
layer_0/tile_data = PackedInt32Array(196604, 196608, 0, 131068, 196608, 0, 65532, 196608, 0, -4, 196608, 0, -65540, 196608, 0, -131076, 196608, 0, -196612, 196608, 0, -327684, 196608, 0, -65542, 196608, 0, -131078, 196608, 0, -196614, 196608, 0, -262150, 196608, 0, -327686, 196608, 0, -327685, 196608, 0, -6, 196608, 0, 65530, 196608, 0, 327674, 196608, 0, 262138, 196608, 0, 196602, 196608, 0, 131066, 196608, 0, 327675, 196608, 0, 327676, 196608, 0, 327677, 196608, 0, 327678, 196608, 0, 196606, 196608, 0, 65534, 196608, 0, -2, 196608, 0, -65538, 196608, 0, -196610, 196608, 0, -327682, 196608, 0, -327683, 196608, 0, -196611, 196608, 0, 196605, 196608, 0, -327681, 196608, 0, -196609, 196608, 0, -262144, 196608, 0, -393216, 196608, 0, -393215, 196608, 0, -393214, 196608, 0, -393213, 196608, 0, -262142, 196608, 0, -262143, 196608, 0, -131072, 196608, 0, -65537, 196608, 0, -1, 196608, 0, 65535, 196608, 0, 0, 196608, 0, -65536, 196608, 0, -131070, 196608, 0, -196606, 196608, 0, -262140, 196608, 0, -327676, 196608, 0, -393212, 196608, 0, -196604, 196608, 0, -131068, 196608, 0, -65534, 196608, 0, 2, 196608, 0, 131072, 196608, 0, 196607, 196608, 0, 327679, 196608, 0, 262144, 196608, 0, 131073, 196608, 0, 131074, 196608, 0, 65538, 196608, 0, 262146, 196608, 0, 262145, 196608, 0, 262147, 196608, 0, 131076, 196608, 0, 65540, 196608, 0, 4, 196608, 0, -65532, 196608, 0, 196612, 196608, 0, 262148, 196608, 0, -65535, 0, 0, 131071, 131072, 0, -3, 0, 0, -131073, 131072, 0, -7, 131072, 0, -65531, 0, 0, 65539, 131072, 0, 196609, 0, 0, 262141, 131072, 0, 131067, 0, 0, -131077, 131072, 0, -262147, 0, 0, -327679, 131072, 0, -196605, 0, 0, -589818, 0, 0, -524282, 0, 0, -458746, 0, 0, -393210, 0, 0, -327674, 0, 0, -262138, 0, 0, -196602, 0, 0, -131066, 0, 0, -65530, 0, 0, 6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 524294, 0, 0, -589817, 0, 0, -524281, 0, 0, -458745, 0, 0, -393209, 0, 0, -327673, 0, 0, -262137, 0, 0, -196601, 0, 0, -131065, 0, 0, -65529, 0, 0, 7, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, -589816, 0, 0, -524280, 0, 0, -458744, 0, 0, -393208, 0, 0, -327672, 0, 0, -262136, 0, 0, -196600, 0, 0, -131064, 0, 0, -65528, 0, 0, 8, 0, 0, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 458760, 0, 0, 524296, 0, 0, -589834, 0, 0, -524298, 0, 0, -458762, 0, 0, -589833, 0, 0, -524297, 0, 0, -458761, 0, 0, -589832, 0, 0, -524296, 0, 0, -458760, 0, 0, -589831, 0, 0, -524295, 0, 0, -458759, 0, 0, -589830, 0, 0, -524294, 0, 0, -458758, 0, 0, -589829, 0, 0, -524293, 0, 0, -458757, 0, 0, -589828, 0, 0, -524292, 0, 0, -458756, 0, 0, -589827, 0, 0, -524291, 0, 0, -458755, 0, 0, -589826, 0, 0, -524290, 0, 0, -458754, 0, 0, -589825, 0, 0, -524289, 0, 0, -458753, 0, 0, -655360, 0, 0, -589824, 0, 0, -524288, 0, 0, -655359, 0, 0, -589823, 0, 0, -524287, 0, 0, -655358, 0, 0, -589822, 0, 0, -524286, 0, 0, -655357, 0, 0, -589821, 0, 0, -524285, 0, 0, -655356, 0, 0, -589820, 0, 0, -524284, 0, 0, -655355, 0, 0, -589819, 0, 0, -524283, 0, 0, -655354, 0, 0, -655353, 0, 0, -655352, 0, 0, -393226, 0, 0, -327690, 0, 0, -262154, 0, 0, -196618, 0, 0, -131082, 0, 0, -65546, 0, 0, -10, 0, 0, 65526, 0, 0, 131062, 0, 0, 196598, 0, 0, 262134, 0, 0, 327670, 0, 0, 393206, 0, 0, 458742, 0, 0, 524278, 0, 0, -393225, 0, 0, -327689, 0, 0, -262153, 0, 0, -196617, 0, 0, -131081, 0, 0, -65545, 0, 0, -9, 0, 0, 65527, 0, 0, 131063, 0, 0, 196599, 0, 0, 262135, 0, 0, 327671, 0, 0, 393207, 0, 0, 458743, 0, 0, 524279, 0, 0, -393224, 0, 0, -327688, 0, 0, -262152, 0, 0, -196616, 0, 0, -131080, 0, 0, -65544, 0, 0, -8, 0, 0, 65528, 0, 0, 131064, 0, 0, 196600, 0, 0, 262136, 0, 0, 327672, 0, 0, 393208, 0, 0, 458744, 0, 0, 524280, 0, 0, 589814, 0, 0, 589815, 0, 0, 589816, 0, 0, 458745, 0, 0, 524281, 0, 0, 589817, 0, 0, 458746, 0, 0, 524282, 0, 0, 589818, 0, 0, 458747, 0, 0, 524283, 0, 0, 589819, 0, 0, 458748, 0, 0, 524284, 0, 0, 589820, 0, 0, 458749, 0, 0, 524285, 0, 0, 589821, 0, 0, 458750, 0, 0, 524286, 0, 0, 589822, 0, 0, 458751, 0, 0, 524287, 0, 0, 589823, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0)
layer_1/name = "Wall"
layer_1/tile_data = PackedInt32Array(65529, 65536, 0, 131065, 65536, 0, 196601, 65536, 0, 262137, 65536, 0, 327673, 65536, 0, 393209, 65536, 0, 393210, 65536, 0, 393211, 65536, 0, 393212, 65536, 0, 393213, 65536, 0, 393214, 65536, 0, 393215, 65536, 0, 327680, 65536, 0, 327681, 65536, 0, 327682, 65536, 0, 327683, 65536, 0, 327684, 65536, 0, 327685, 65536, 0, 262149, 65536, 0, 196613, 65536, 0, 131077, 65536, 0, 65541, 65536, 0, 5, 65536, 0, 196610, 65536, 0, 196611, 65536, 0, 131075, 65536, 0, 3, 65536, 0, -65533, 65536, 0, -131069, 65536, 0, 196608, 65536, 0, 262143, 65536, 0, 262142, 65536, 0, 262140, 65536, 0, 262139, 65536, 0, 196603, 65536, 0, 65531, 65536, 0, -5, 65536, 0, -65541, 65536, 0, -65543, 65536, 0, -131079, 65536, 0, -196615, 65536, 0, -262151, 65536, 0, -327687, 65536, 0, -393223, 65536, 0, -393222, 65536, 0, -393221, 65536, 0, -393220, 65536, 0, -393219, 65536, 0, -393218, 65536, 0, -393217, 65536, 0, -458752, 65536, 0, -458751, 65536, 0, -458750, 65536, 0, -458749, 65536, 0, -458748, 65536, 0, -458747, 65536, 0, -393211, 65536, 0, -327675, 65536, 0, -262139, 65536, 0, -196603, 65536, 0, -131067, 65536, 0, -262141, 65536, 0, -327678, 65536, 0, -327677, 65536, 0, -327680, 65536, 0, -262145, 65536, 0, -262146, 65536, 0, -262148, 65536, 0, -262149, 65536, 0, -196613, 65536, 0, -131074, 65536, 0, -65539, 65536, 0, -131075, 65536, 0, 65533, 65536, 0, 131070, 65536, 0, 131069, 65536, 0, 65536, 65536, 0, 1, 65536, 0, 65537, 65536, 0, -131071, 65536, 0, -196608, 65536, 0, -196607, 65536, 0)

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("7_rpcob")
format = 2
layer_0/name = "Floor"
layer_1/name = "Wall"
layer_1/tile_data = PackedInt32Array()

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
energy = 0.25
blend_mode = 1

[node name="TrapCollisionDay" type="Node2D" parent="."]

[node name="TrapCol" parent="TrapCollisionDay" instance=ExtResource("8_i5cjx")]
position = Vector2(48, -15)
collision_layer = 8
collision_mask = 0
script = ExtResource("9_fd8df")

[node name="TrapCol2" parent="TrapCollisionDay" instance=ExtResource("8_i5cjx")]
position = Vector2(-80, -16)
collision_layer = 8
collision_mask = 0
script = ExtResource("9_fd8df")

[node name="TrapCol3" parent="TrapCollisionDay" instance=ExtResource("8_i5cjx")]
position = Vector2(112, -80)
collision_layer = 8
collision_mask = 0
script = ExtResource("9_fd8df")

[node name="TrapCol4" parent="TrapCollisionDay" instance=ExtResource("8_i5cjx")]
position = Vector2(48, 112)
collision_layer = 8
collision_mask = 0
script = ExtResource("9_fd8df")

[node name="TrapCol5" parent="TrapCollisionDay" instance=ExtResource("8_i5cjx")]
position = Vector2(-144, 48)
collision_layer = 8
collision_mask = 0
script = ExtResource("9_fd8df")

[node name="TrapCol6" parent="TrapCollisionDay" instance=ExtResource("8_i5cjx")]
position = Vector2(-80, -144)
collision_layer = 8
collision_mask = 0
script = ExtResource("9_fd8df")

[node name="TrapCol7" parent="TrapCollisionDay" instance=ExtResource("8_i5cjx")]
position = Vector2(177, -16)
collision_layer = 8
collision_mask = 0
script = ExtResource("9_fd8df")

[node name="TrapCollisionNight" type="Node2D" parent="."]

[node name="TrapCol" parent="TrapCollisionNight" instance=ExtResource("8_i5cjx")]
position = Vector2(-17, -80)
collision_layer = 8
collision_mask = 0
script = ExtResource("9_fd8df")

[node name="TrapCol2" parent="TrapCollisionNight" instance=ExtResource("8_i5cjx")]
position = Vector2(-16, 48)
collision_layer = 8
collision_mask = 0
script = ExtResource("9_fd8df")

[node name="TrapCol3" parent="TrapCollisionNight" instance=ExtResource("8_i5cjx")]
position = Vector2(112, 48)
collision_layer = 8
collision_mask = 0
script = ExtResource("9_fd8df")

[node name="TrapCol4" parent="TrapCollisionNight" instance=ExtResource("8_i5cjx")]
position = Vector2(-80, 112)
collision_layer = 8
collision_mask = 0
script = ExtResource("9_fd8df")

[node name="TrapCol5" parent="TrapCollisionNight" instance=ExtResource("8_i5cjx")]
position = Vector2(-145, -79)
collision_layer = 8
collision_mask = 0
script = ExtResource("9_fd8df")

[node name="TrapCol6" parent="TrapCollisionNight" instance=ExtResource("8_i5cjx")]
position = Vector2(48, -144)
collision_layer = 8
collision_mask = 0
script = ExtResource("9_fd8df")

[node name="TrapCol7" parent="TrapCollisionNight" instance=ExtResource("8_i5cjx")]
position = Vector2(-208, -15)
collision_layer = 8
collision_mask = 0
script = ExtResource("9_fd8df")

[node name="EnemyProjectileTemp" type="Node2D" parent="."]

[node name="EnemyStaticObject" type="Node2D" parent="."]

[node name="ProjectileTemp" type="Node2D" parent="."]

[node name="Boss" parent="." instance=ExtResource("13_ixunt")]
position = Vector2(1370, 89)
metadata/_edit_lock_ = true

[node name="Node2D" type="Node2D" parent="."]

[node name="Character" parent="." instance=ExtResource("10_tc7wq")]
position = Vector2(-16, -15)

[node name="PointLight2D" type="PointLight2D" parent="Character"]
energy = 2.5
shadow_enabled = true
texture = ExtResource("11_x8vvf")
texture_scale = 0.4
metadata/_edit_lock_ = true

[node name="UI" parent="." instance=ExtResource("12_j6qy8")]

[node name="Enemy_Day_Melee" parent="." instance=ExtResource("14_nw2rx")]
position = Vector2(425, 3)

[connection signal="timeout" from="AbleToSwapWorldTimer" to="Character" method="_on_able_to_swap_world_timer_timeout"]
[connection signal="body_entered" from="TrapCollisionDay/TrapCol" to="TrapCollisionDay/TrapCol" method="_on_body_entered"]
[connection signal="body_entered" from="TrapCollisionDay/TrapCol2" to="TrapCollisionDay/TrapCol2" method="_on_body_entered"]
[connection signal="body_entered" from="TrapCollisionDay/TrapCol3" to="TrapCollisionDay/TrapCol3" method="_on_body_entered"]
[connection signal="body_entered" from="TrapCollisionDay/TrapCol4" to="TrapCollisionDay/TrapCol4" method="_on_body_entered"]
[connection signal="body_entered" from="TrapCollisionDay/TrapCol5" to="TrapCollisionDay/TrapCol5" method="_on_body_entered"]
[connection signal="body_entered" from="TrapCollisionDay/TrapCol6" to="TrapCollisionDay/TrapCol6" method="_on_body_entered"]
[connection signal="body_entered" from="TrapCollisionDay/TrapCol7" to="TrapCollisionDay/TrapCol7" method="_on_body_entered"]
[connection signal="body_entered" from="TrapCollisionNight/TrapCol" to="TrapCollisionNight/TrapCol" method="_on_body_entered"]
[connection signal="body_entered" from="TrapCollisionNight/TrapCol2" to="TrapCollisionNight/TrapCol2" method="_on_body_entered"]
[connection signal="body_entered" from="TrapCollisionNight/TrapCol3" to="TrapCollisionNight/TrapCol3" method="_on_body_entered"]
[connection signal="body_entered" from="TrapCollisionNight/TrapCol4" to="TrapCollisionNight/TrapCol4" method="_on_body_entered"]
[connection signal="body_entered" from="TrapCollisionNight/TrapCol5" to="TrapCollisionNight/TrapCol5" method="_on_body_entered"]
[connection signal="body_entered" from="TrapCollisionNight/TrapCol6" to="TrapCollisionNight/TrapCol6" method="_on_body_entered"]
[connection signal="body_entered" from="TrapCollisionNight/TrapCol7" to="TrapCollisionNight/TrapCol7" method="_on_body_entered"]
[connection signal="boss_action_bomb" from="Boss" to="." method="_on_boss_action_bomb"]
[connection signal="boss_action_shoot" from="Boss" to="." method="_on_boss_action_shoot"]
[connection signal="boss_action_slash" from="Boss" to="." method="_on_boss_action_slash"]
[connection signal="mouse1_melee" from="Character" to="." method="_on_player_mouse1_melee"]
[connection signal="mouse1_ranged" from="Character" to="." method="_on_player_mouse1_ranged"]
[connection signal="enemy_melee_attack" from="Enemy_Day_Melee" to="." method="_on_enemy_day_melee_enemy_melee_attack"]
